2007-11-23  Tobias Burnus  <burnus@net-b.de>

PR fortran/34187
        * module.c (load_needed): Ensure binding_label is not lost.

        * decl.c (set_binding_label,gfc_match_bind_c): Replace
        strncpy by strcpy.

2007-11-23  Tobias Burnus  <burnus@net-b.de>

        PR fortran/34187
        * gfortran.dg/bind_c_usage_15.f90: New.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@130386 138bc75d-0d04-0410-961f-82ee72b054a4